--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gsap": "^1.20.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "^21.2.1",
+    "material-ui": "^0.20.0",
     "moment": "^2.18.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
