--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "private": true,
   "main": "http://localhost:3000",
   "window": {
-	  "width": 1024,
-	  "height": 768
+    "width": 1024,
+    "height": 768
   },
   "dependencies": {
     "autoprefixer": "7.1.2",
@@ -45,6 +45,7 @@
     "react": "^16.2.0",
     "react-dev-utils": "^3.1.0",
     "react-dom": "^16.2.0",
+    "react-swipeable-views": "^0.12.13",
     "react-transition-group": "^2.2.0",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
