Логика Singleplayer->Toolbar перенесена в Singleplayer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
 	"editor.detectIndentation": false,
-	"easysass.compileAfterSave": false
+	"easysass.compileAfterSave": false,
+	"editor.insertSpaces": true
 }
