--- a/.eslintrc
+++ b/.eslintrc
@@ -164,7 +164,7 @@ rules:
   newline-before-return: 1
   newline-per-chained-call: 0
   no-array-constructor: 1
-  no-bitwise: 1
+  no-bitwise: 0
   no-continue: 1
   no-inline-comments: 0
   no-lonely-if: 1
@@ -174,7 +174,7 @@ rules:
   nj-negated-condition: 0
   no-nested-ternary: 0
   no-new-object: 1
-  no-plusplus: [1, { "allowForLoopAfterthoughts": true }]
+  no-plusplus: 0
   no-restricted-syntax: 1
   no-tabs: 1
   no-trailing-spaces: 1
