servers:masterServers => servers:master

--- a/src/declarations/defaultconfig.json
+++ b/src/declarations/defaultconfig.json
@@ -30,7 +30,7 @@
         }
     },
     "servers": {
-        "masterServers": {
+        "master": {
             "zandronum": "master.zandronum.com:15300"
         },
         "favorite": [
