--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chalk": "1.1.3",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
+    "electron": "^8.0.2",
     "enzyme": "^3.11.0",
     "eslint": "4.4.1",
     "eslint-config-react-app": "^2.0.0",
