--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "http://github.com/PROPHESSOR/DBFGL",
   "private": true,
   "main": "electron.js",
+  "node-remote": "http://localhost:3000",
   "scripts": {
     "start-server": "node scripts/start.js",
     "start": "node scripts/start.js",
