--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
     "react": "^16.13.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dev-utils": "^3.1.3",
     "react-dom": "^16.13.0",
     "react-swipeable-views": "^0.12.18",
