--- a/package.json
+++ b/package.json
@@ -19,31 +19,13 @@
   },
   "dependencies": {
     "autoprefixer": "7.1.2",
-    "babel-core": "6.25.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.1",
-    "babel-preset-react-app": "^3.1.2",
-    "babel-runtime": "6.23.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
-    "electron": "^8.0.2",
-    "enzyme": "^3.11.0",
-    "eslint": "4.18.2",
-    "eslint-config-react-app": "^2.0.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.35.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.1.0",
-    "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
     "gsap": "^1.20.6",
     "html-webpack-plugin": "2.29.0",
-    "jest": "^21.2.1",
     "material-ui": "^0.20.2",
     "moment": "^2.24.0",
     "nconf": "^0.10.0",
@@ -58,14 +40,33 @@
     "react-swipeable-views": "^0.12.18",
     "react-transition-group": "^2.9.0",
     "style-loader": "0.18.2",
-    "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
-    "webpack": "3.5.1",
-    "webpack-dev-server": "^2.0.0",
-    "webpack-manifest-plugin": "1.2.1",
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
+    "babel-core": "6.25.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.1",
+    "babel-preset-react-app": "^3.1.2",
+    "babel-runtime": "6.23.0",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "enzyme": "^3.11.0",
+    "eslint": "4.18.2",
+    "eslint-config-react-app": "^2.0.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.35.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.1.0",
+    "extract-text-webpack-plugin": "3.0.0",
+    "jest": "^21.2.1",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "webpack": "3.5.1",
+    "webpack-dev-server": "^2.0.0",
+    "webpack-manifest-plugin": "1.2.1",
+    "electron": "^8.0.2",
+    "electron-builder": "^22.3.6",
     "babel-preset-stage-0": "^6.24.1",
     "enzyme-adapter-react-16": "^1.15.2",
     "node-sass": "^4.13.1",
