--- a/package-app.json
+++ b/package-app.json
@@ -1,7 +1,7 @@
 {
     "name": "doom-bfg-launcher",
     "description": "[DBFGL] Doom BFG Launcher",
-    "author": "PROPHESSOR",
+    "author": "PROPHESSOR <xenteze@gmail.com>",
     "version": "0.0.1",
     "main": "app.js"
   }
