--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "node scripts/test.js --env=jsdom",
     "build": "node scripts/build.js",
     "check": "run-s lint:eslint lint:scss-lint",
+    "lint": "./node_modules/.bin/eslint ./src",
     "lint:eslint": "eslint ./src",
     "lint:scss-lint": "scss-lint",
     "ebuild": "./afterbuild.sh; ./node_modules/.bin/electron-builder",
