--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dev-utils": "^3.1.3",
     "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
     "react-swipeable-views": "^0.12.18",
     "react-transition-group": "^2.9.0",
+    "redux": "^4.0.5",
     "style-loader": "0.18.2",
     "url-loader": "0.5.9",
     "whatwg-fetch": "2.0.3"
@@ -52,9 +54,13 @@
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.1",
     "babel-preset-react-app": "^3.1.2",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "electron": "^8.0.2",
+    "electron-builder": "^22.3.6",
     "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "4.18.2",
     "eslint-config-react-app": "^2.0.0",
     "eslint-loader": "1.9.0",
@@ -64,20 +70,16 @@
     "eslint-plugin-react": "7.1.0",
     "extract-text-webpack-plugin": "3.0.0",
     "jest": "^21.2.1",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "webpack": "3.5.1",
-    "webpack-dev-server": "^2.0.0",
-    "webpack-manifest-plugin": "1.2.1",
-    "electron": "^8.0.2",
-    "electron-builder": "^22.3.6",
-    "babel-preset-stage-0": "^6.24.1",
-    "enzyme-adapter-react-16": "^1.15.2",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
     "prop-types": "^15.7.2",
     "raf": "^3.4.1",
     "react-test-renderer": "^16.13.0",
-    "sass-loader": "^6.0.6"
+    "sass-loader": "^6.0.6",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "webpack": "3.5.1",
+    "webpack-dev-server": "^2.0.0",
+    "webpack-manifest-plugin": "1.2.1"
   },
   "jest": {
     "collectCoverageFrom": [
