Добавлена сборка для windows (nsis-web и portable)

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -16,7 +16,11 @@ mac:
     - dmg
 win:
   target:
-    - target: nsis
+    # - target: nsis
+    #   arch:
+    #     - x64
+    #     - ia32
+    - target: nsis-web
       arch:
         - x64
         - ia32
