--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "7.1.2",
     "chalk": "1.1.3",
     "css-loader": "0.28.4",
+    "cursor": "^0.1.5",
     "dotenv": "4.0.0",
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
